--- a/matcher/templates/admin_master.html
+++ b/matcher/templates/admin_master.html
@@ -10,7 +10,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for attribute in model.attributes|sort(attribute='score')|sort(attribute='type.value') %}
+      {% for attribute in model.attributes|sort(attribute='score', reverse=True)|sort(attribute='type.value') %}
         <tr>
           <td>{{ attribute.type|upper }}</td>
           <td>
@@ -74,12 +74,12 @@
 {% endmacro %}
 
 {% macro attributes_link(attributes, show_score=False) %}
-  {% for attribute in attributes -%}
+  {% for attribute in attributes|sort(attribute='score', reverse=True)|sort(attribute='type.value')  -%}
     <a href="{{ url_for('value.details_view', id=attribute.id) }}">
       {{- attribute.text -}}
     </a>
     {%- if show_score %}
-      ({{ attribute.score }})
+      ({{ attribute.type|upper }}, {{ attribute.score }})
     {%- endif -%}
     {{- "," if not loop.last }}
   {% endfor %}
