Fancy stats and charts

--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -22,5 +22,6 @@
   <script src="https://unpkg.com/material-dashboard@2.1.0/assets/js/plugins/chartist.min.js"></script> 
   <script src="https://unpkg.com/material-dashboard@2.1.0/assets/js/plugins/bootstrap-notify.js"></script> 
   <script src="https://unpkg.com/material-dashboard@2.1.0/assets/js/material-dashboard.min.js?v=2.1.0" type="text/javascript"></script>
+  {% block script %}{% endblock %}
 </body>
 </html>
