--- a/matcher/templates/home.html
+++ b/matcher/templates/home.html
@@ -75,14 +75,14 @@
     </div>
 
     <div class="col-8">
-      <div class="card">
-        <div class="card-header card-header-primary d-flex">
-          <div class="mr-auto">
-            <h4 class="card-title">Recent scraps</h4>
-            <p class="card-category">Recent scraps</p>
-          </div>
-          <a href="#" class="btn btn-white">See all</a>
+      <div class="card card-chart">
+        <div class="card-header card-header-primary">
+          <div class="ct-chart" id="scrap-stats"></div>
         </div>
+        <div class="card-body">
+          <h4 class="card-title">Items scraped in the last 7 days</h4>
+        </div>
+        <hr />
         <div class="card-body table-responsive">
           <table class="table">
             <thead class="text-primary">
@@ -94,18 +94,55 @@
               </tr>
             </thead>
             <tbody>
-              {% for scrap in last_scraps %}
+              {% for scrap in last_scraps | reverse %}
                 <tr>
                   <td>{{ scrap.platform.name }}</td>
                   <td>{{ scrap.status | upper }}</td>
-                  <td>{{ scrap.date }}</td>
+                  <td>{{ scrap.date | relative_date }}</td>
                   <td>{{ scrap.links_count }}</td>
                 </tr>
               {% endfor %}
             </tbody>
           </table>
         </div>
+        <div class="card-footer">
+          <div class="stats">
+            <i class="material-icons">access_time</i>
+            {{ recent_scraps_count['day'] }} scraps today,
+            {{ recent_scraps_count['week'] }} during the last 7 days,
+            {{ recent_scraps_count['month'] }} this month and
+            {{ recent_scraps_count['year'] }} this year.
+          </div>
+        </div>
       </div>
     </div>
   </div>
+{% endblock %}
+
+{% block script %}
+  <script type="text/javascript">
+    fetch('{{ url_for("api.scraps_scrap_stats") }}')
+      .then(r => r.json())
+      .then(data => {
+        const labels = Object.keys(data);
+        const values = Object.values(data);
+        const chart = new Chartist.Line('#scrap-stats', {
+          labels,
+          series: [
+            // values.map(v => v.scraps),
+            values.map(v => v.items),
+          ]
+        }, {
+          lineSmooth: Chartist.Interpolation.cardinal({
+            tension: 0
+          }),
+          chartPadding: {
+            right: 0,
+            left: 0
+          },
+        });
+
+        md.startAnimationForLineChart(chart);
+      });
+  </script>
 {% endblock %}
