Better dates and add a "Latest exports" card

--- a/matcher/templates/home.html
+++ b/matcher/templates/home.html
@@ -72,6 +72,33 @@
           </div>
         </div>
       </div>
+
+      <div class="card">
+        <div class="card-header card-header-info">
+          <h3 class="card-title">Latest exports</h3>
+          <p class="card-category">43 exports available</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <a href="#">cras_justo_odio.xslx</a>
+            <small>454Kb</small>
+          </li>
+          <li class="list-group-item">
+            <a href="#">dapibus_ac_facilisis_in.xslx</a>
+            <small>132Kb</small>
+          </li>
+          <li class="list-group-item">
+            <a href="#">vestibulum_at_eros.xslx</a>
+            <small>933Kb</small>
+          </li>
+        </ul>
+        <div class="card-footer">
+          <div class="stats">
+            <i class="material-icons">access_time</i>
+            Last exports were generated 3 hours ago
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="col-8">
@@ -104,6 +131,10 @@
               {% endfor %}
             </tbody>
           </table>
+          <div class="d-flex justify-content-end">
+            <a href="#" class="btn btn-secondary">New scrap</a>
+            <a href="#" class="btn btn-primary">See all</a>
+          </div>
         </div>
         <div class="card-footer">
           <div class="stats">
