Scrap and platform list pages in dashboard

--- a/matcher/templates/home.html
+++ b/matcher/templates/home.html
@@ -133,7 +133,7 @@
           </table>
           <div class="d-flex justify-content-end">
             <a href="#" class="btn btn-secondary">New scrap</a>
-            <a href="#" class="btn btn-primary">See all</a>
+            <a href="{{ url_for('.scrap_list') }}" class="btn btn-primary">See all</a>
           </div>
         </div>
         <div class="card-footer">
