--- a/matcher/dashboard/templates/scraps/list.html
+++ b/matcher/dashboard/templates/scraps/list.html
@@ -24,26 +24,9 @@
     <div class="col-8">
       <div class="card">
         <div class="card-body table-responsive">
-          <table class="table">
-            <thead class="text-primary">
-              <tr>
-                <th>Platform</th>
-                <th>Status</th>
-                <th>Date</th>
-                <th>Links</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for scrap in page.items %}
-                <tr>
-                  <td>{{ scrap.platform.name }}</td>
-                  <td>{{ scrap.status | upper }}</td>
-                  <td>{{ scrap.date | relative_date }}</td>
-                  <td>{{ scrap.links_count }}</td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+          {% with scraps=page.items %}
+            {% include "scraps/_list.html" %}
+          {% endwith %}
         </div>
         <div class="card-footer">
           {{ m.render_pagination(page, args=query) }}
