Move scheme's enums in matcher.scheme.enums

--- a/matcher/dashboard/templates/platforms/list.html
+++ b/matcher/dashboard/templates/platforms/list.html
@@ -32,10 +32,14 @@
             <tbody>
               {% for platform in page.items %}
                 <tr>
-                  <td>{{ platform.type | upper }}</td>
+                  <td>
+                    <span class="badge badge-pill badge-{{ platform.type | badge_color }}">
+                      {{ platform.type | upper }}
+                    </span>
+                  </td>
                   <td>{{ platform.name }}</td>
                   <td>{{ platform.slug }}</td>
-                  <td>{{ platform.country }}</td>
+                  <td>{{ platform.country or "—" }}</td>
                   <td>{{ platform.links_count }}</td>
                 </tr>
               {% endfor %}
