--- a/matcher/templates/nav.html
+++ b/matcher/templates/nav.html
@@ -26,7 +26,7 @@
       {{ menu_item("Home", "dashboard.home") }}
       {{ menu_item("Platforms", "dashboard.platform_list") }}
       {{ menu_item("Scraps", "dashboard.scrap_list") }}
-      {{ menu_item("Objects") }}
+      {{ menu_item("Objects", "dashboard.object_list") }}
       {{ menu_item("Exports") }}
     </ul>
 
