--- a/matcher/templates/macros.html
+++ b/matcher/templates/macros.html
@@ -82,3 +82,7 @@
     {{ plural }}
   {%- endif -%}
 {%- endmacro %}
+
+{% macro todo() -%}
+  <p class="text-monospace">// TODO.</p>
+{%- endmacro %}
