--- a/matcher/dashboard/templates/exports/factories/list.html
+++ b/matcher/dashboard/templates/exports/factories/list.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "base-fluid.html" %}
 {% import "macros.html" as m %}
 
 {% block content %}
   <div class="row">
-    <div class="col-3">
+    <div class="col-md-4 col-12 filters">
       <div class="card">
         <div class="card-header card-header-primary">
           <h4 class="card-title">Filters</h4>
@@ -15,7 +15,7 @@
         {% endcall %}
       </div>
     </div>
-    <div class="col-9">
+    <div class="col-md col-12">
       <div class="card">
         <div class="card-body table-responsive">
           <table class="table">
