--- a/matcher/dashboard/templates/objects/list.html
+++ b/matcher/dashboard/templates/objects/list.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "base-fluid.html" %}
 {% import "macros.html" as m %}
 
 {% block content %}
   <div class="row">
-    <div class="col-4">
+    <div class="col-md-4 col-12 filters">
       <div class="card">
         <div class="card-header card-header-primary">
           <h4 class="card-title">Filters</h4>
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class="col-8">
+    <div class="col-md col-12">
       <div class="card">
         <div class="card-body table-responsive">
           {% with objects=page.items %}
