--- a/matcher/dashboard/templates/platforms/list.html
+++ b/matcher/dashboard/templates/platforms/list.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "base-fluid.html" %}
 {% import "macros.html" as m %}
 
 {% block content %}
   <div class="row">
-    <div class="col-4">
+    <div class="col-12 col-md-4 filters">
       <div class="card">
         <div class="card-header card-header-primary">
           <h4 class="card-title">Filters</h4>
@@ -16,7 +16,7 @@
         {% endcall %}
       </div>
     </div>
-    <div class="col-8">
+    <div class="col-12 col-md">
       <div class="card">
         <div class="card-body table-responsive">
           <table class="table">
