--- a/matcher/dashboard/templates/scraps/list.html
+++ b/matcher/dashboard/templates/scraps/list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base-fluid.html" %}
 {% import "macros.html" as m %}
 
 {% block content %}
@@ -8,7 +8,7 @@
   </h3>
 
   <div class="row">
-    <div class="col-4">
+    <div class="col-12 col-md-4 filters">
       <div class="card">
         <div class="card-header card-header-primary">
           <h4 class="card-title">Filters</h4>
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="col-8">
+    <div class="col-12 col-md">
       <div class="card">
         <div class="card-body table-responsive">
           {% with scraps=page.items %}
