--- a/matcher/dashboard/templates/exports/factories/show.html
+++ b/matcher/dashboard/templates/exports/factories/show.html
@@ -2,5 +2,56 @@
 {% import "macros.html" as m %}
 
 {% block content %}
-  {{ m.todo() }}
+  <div class="row">
+    <div class="col-4">
+      <div class="card">
+        <div class="card-header card-header-primary">
+          <h3 class="card-title">{{ factory.name }}</h3>
+        </div>
+        <div class="card-body">
+          <dl>
+            <dt>File path template</dt>
+            <dd class="text-monospace">{{ factory.file_path_template | template_highlight }}</dd>
+
+            <dt>Iterator</dt>
+            <dd>
+              <span class="badge badge-{{ factory.iterator | badge_color }}">{{ factory.iterator | upper }}</span>
+            </dd>
+
+            <dt>Filters template</dt>
+            {% for key, value in factory.filters_template.items() %}
+              <dd class="text-monospace"><b>{{ key }}</b> = {{ value | template_highlight }}</dd>
+            {% endfor %}
+          </dl>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header card-header-info">
+          <h3 class="card-title">Latest exports</h3>
+          <p class="card-category">{{ factory.files | length }} exports available</p>
+        </div>
+        <div class="list-group list-group-flush">
+          {% for file in factory.files[-9:] %}
+            <a class="list-group-item list-group-item-action" href="{{ url_for('.show_export_file', id=file.id ) }}">
+              <div>
+                {{ file.path | filename }}
+              </div>
+              <small>
+                Session “{{ file.session.name }}”
+                {% if file.last_activity %}
+                  &bull; {{ file.last_activity | relative_date }}
+                {% endif %}
+              </small>
+            </a>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+    <div class="col-8">
+      {% with template = factory.template %}
+        {% include 'exports/templates/_card.html' %}
+      {% endwith %}
+    </div>
+  </div>
 {% endblock %}
