--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -27,7 +27,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
-      $(".select2").select2();
+      $(".select2").select2({ width: 'element' });
     });
 
     var flashes = {{ get_flashed_messages() | tojson }};
