--- a/matcher/templates/macros.html
+++ b/matcher/templates/macros.html
@@ -29,6 +29,13 @@
   </div>
 {%- endmacro %}
 
+{% macro render_table_field(field) -%}
+  <fieldset class="nested-form-field">
+    <legend>{{ field.label }}</legend>
+    {{ field() }}
+  </fieldset>
+{%- endmacro %}
+
 {% macro render_checkbox_field(field) -%}
   <div class="checkbox">
     <label>
@@ -58,6 +65,8 @@
           {{ render_checkbox_field(f) }}
         {% elif f.type == 'RadioField' %}
           {{ render_radio_field(f) }}
+        {% elif f.type == 'FormField' %}
+          {{ render_table_field(f) }}
         {% else %}
           {{ render_field(f) }}
         {% endif %}
